--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -147,7 +148,7 @@
                 <h2><a class="dashlink" target="_blank" href="https://hz.nl/uploads/documents/Regelingen/OERS/2017-2018/HBO-ICT-2017-2018-OER.pdf#">Uitvoeringsregeling
                         (UR)
                     </a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://learn.hz.nl/mod/book/view.php?id=46775&chapterid=170">HZ
+                <h2><a class="dashlink" target="_blank" href="https://learn.hz.nl/my/">HZ
                         learn
                     </a></h2>
                 <h2><a class="dashlink" target="_blank" href="https://hz-hbo-ict.slack.com/">HBO-ICT slack</a></h2>
@@ -158,7 +159,7 @@
         <div class="spacer"></div>
         <div class="footer">
             <div class="cont2">
-                <a class=footerlink>
+                <a href="sitemap.html" class=footerlink>
                     sitemap
                 </a>
             </div>
