--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -158,7 +159,7 @@
         <div class="spacer"></div>
         <div class="footer">
             <div class="cont2">
-                <a class=footerlink>
+                <a href="sitemap.html" class=footerlink>
                     sitemap
                 </a>
             </div>
