--- a/youdied.html
+++ b/youdied.html
@@ -7,6 +7,7 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <script src="main.js"></script>
 </head>
 
