mobile menu optimized

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,34 @@
 
 <body>
     <div class="containall">
+        <div class="mobilemenu">
+            <div id="mmmbutton">
+                <p class="menubutton">
+                    Menu
+                </p>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="Home.html" class="menu">
+                            Home
+                        </a>
+                    </p>
+                </div>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="dashboard.html" class="menu">
+                            Dashboard
+                        </a>
+                    </p>
+                </div>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="profiel.html" class="menu">
+                            Profiel
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="menu">
             <div class="button">
                 <p class="menubutton">
@@ -148,8 +176,7 @@
                 <h2><a class="dashlink" target="_blank" href="https://hz.nl/uploads/documents/Regelingen/OERS/2017-2018/HBO-ICT-2017-2018-OER.pdf#">Uitvoeringsregeling
                         (UR)
                     </a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://learn.hz.nl/my/">HZ
-                        learn
+                <h2><a class="dashlink" target="_blank" href="https://learn.hz.nl/my/">HZ learn
                     </a></h2>
                 <h2><a class="dashlink" target="_blank" href="https://hz-hbo-ict.slack.com/">HBO-ICT slack</a></h2>
                 <h2><a class="dashlink" target="_blank" href="https://apps.hz.nl/angular/studievoortgang/studievoortgang">Studievoortgang</a></h2>
