--- a/dashboard.html
+++ b/dashboard.html
@@ -17,7 +17,7 @@
                 </p>
                 <div id="mmcontent">
                     <p class="menubutton">
-                        <a href="Home.html" class="menu">
+                        <a href="index.html" class="menu">
                             Home
                         </a>
                     </p>
