--- a/profiel.html
+++ b/profiel.html
@@ -10,6 +10,34 @@
 
 <body>
     <div class="containall">
+        <div class="mobilemenu">
+            <div id="mmmbutton">
+                <p class="menubutton">
+                    Menu
+                </p>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="index.html" class="menu">
+                            Home
+                        </a>
+                    </p>
+                </div>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="dashboard.html" class="menu">
+                            Dashboard
+                        </a>
+                    </p>
+                </div>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="profiel.html" class="menu">
+                            Profiel
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="menu">
             <div class="button">
                 <p class="menubutton">
