easter egg added

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,10 @@
 
 <body>
     <div class="containall">
+            <div class="cont1">
+                    <h1 class="titel">Dashboard</h1>
+                </div>
+                <div class="spacer"></div>
         <div class="mobilemenu">
             <div id="mmmbutton">
                 <p class="menubutton">
