--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <div class="containall">
+        <div class="cont1">
+            <h1 class="titel">Home</h1>
+        </div>
+        <div class="spacer"></div>
         <div class="mobilemenu">
             <div id="mmmbutton">
                 <p class="menubutton">
@@ -64,105 +68,21 @@
         <div class="spacer"></div>
         <div class="cont1">
             <div class="cont2">
-                <h1>Home</h1>
+                <h1>Waarom ik geschikt ben voor HBO</h1>
             </div>
             <div class="controw">
                 <div class="cont2">
-                    <table>
-                        <tr>
-                            <th>Semester 1</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        <tr class="legend">
-                            <td>Toets</td>
-                            <td>Behaald</td>
-                            <td class="aec">Aantal EC</td>
-                        </tr>
-                        <tr>
-                            <td>Computer Science Basics</td>
-                            <td class="bpending"></td>
-                            <td>7.5</td>
-                        </tr>
-                        <tr>
-                            <td>Object-Orriented programming</td>
-                            <td class="bpending"></td>
-                            <td>10</td>
-                        </tr>
-                        <tr>
-                            <td>Opleidings- en Beroepsorrientatie</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
-                        <tr>
-                            <td>Professional skills 1</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
-                        <tr>
-                            <td>Programming basics</td>
-                            <td class="bpending"></td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>HZ personality 2a</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
-                        <tr>
-                            <td>IT personality 2a</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
-                    </table>
+                    <img width: src="#">
                 </div>
                 <div class="cont2">
                     <table>
-                        <tr>
-                            <th>Semester 2</th>
-                            <th></th>
-                            <th></th>
-                        </tr>
-                        <tr class="legend">
-                            <td>Toets</td>
-                            <td>Behaald</td>
-                            <td class="aec">Aantal EC</td>
-                        </tr>
-                        <tr>
-                            <td>Framework Development 1</td>
-                            <td class="bpending"></td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>Framework Development 2</td>
-                            <td class="bpending"></td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>Framework Project 1</td>
-                            <td class="bpending"></td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>Framework Project 2</td>
-                            <td class="bpending"></td>
-                            <td>5</td>
-                        </tr>
-                        <tr>
-                            <td>Professional skills 2</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
-                        <tr>
-                            <td>Professinal skills 3</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
-                        <tr>
-                            <td>Professinele werkplek 1</td>
-                            <td class="bpending"></td>
-                            <td>2.5</td>
-                        </tr>
+                        <li>een</li>
+                        <li>twee</li>
+                        <li>drie</li>
+                        <li>vier</li>
+                        <li>vijf</li>
+                        <li>zes</li>
+                        <li>zeven</li>
                     </table>
                 </div>
             </div>
@@ -170,18 +90,32 @@
         <div class="spacer"></div>
         <div class="cont1">
             <div class="cont2">
-                <h1>Links:</h1>
-                <h2><a class="dashlink" target="_blank" href="https://hz.nl/uploads/documents/Regelingen/NL/Onderwijs-examenregelingen/OER-HZ-2018-2019docv2018-06-26DEFCvB-V-01.pdf">Onderwijs
-                        en Examenregelement (OER)</a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://hz.nl/uploads/documents/Regelingen/OERS/2017-2018/HBO-ICT-2017-2018-OER.pdf#">Uitvoeringsregeling
-                        (UR)
-                    </a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://learn.hz.nl/mod/book/view.php?id=46775&chapterid=170">HZ
-                        learn
-                    </a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://hz-hbo-ict.slack.com/">HBO-ICT slack</a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://apps.hz.nl/angular/studievoortgang/studievoortgang">Studievoortgang</a></h2>
-                <h2><a class="dashlink" target="_blank" href="https://github.com/Jessep2000/Jessep2000.github.io">Github</a></h2>
+                <h1>Waarom ik <a class="menu" href="youdied.html">geschikt</a> ben voor ICT</h1>
+            </div>
+            <div class="controw">
+                <div class="cont2">
+                    <table>
+                        <li>een</li>
+                        <li>twee</li>
+                        <li>drie</li>
+                        <li>vier</li>
+                        <li>vijf</li>
+                        <li>zes</li>
+                        <li>zeven</li>
+                    </table>
+                </div>
+                <div class="spacer"></div>
+                <div class="cont2">
+                    <table>
+                        <li>een</li>
+                        <li>twee</li>
+                        <li>drie</li>
+                        <li>vier</li>
+                        <li>vijf</li>
+                        <li>zes</li>
+                        <li>zeven</li>
+                    </table>
+                </div>
             </div>
         </div>
         <div class="spacer"></div>
