--- a/profiel.html
+++ b/profiel.html
@@ -10,6 +10,10 @@
 
 <body>
     <div class="containall">
+        <div class="cont1">
+            <h1 class="titel">Profiel</h1>
+        </div>
+        <div class="spacer"></div>
         <div class="mobilemenu">
             <div id="mmmbutton">
                 <p class="menubutton">
@@ -63,9 +67,6 @@
         </div>
         <div class="spacer"></div>
         <div class="cont1">
-            <div class="cont2">
-                <h1>Profiel:</h1>
-            </div>
             <div class="controw">
                 <div class="cont2">
                     <img src="#">
