--- a/profiel.html
+++ b/profiel.html
@@ -72,16 +72,7 @@
                     <img src="#">
                 </div>
                 <div class="cont2">
-                    <ul>
-                        <li>een</li>
-                        <li>twee</li>
-                        <li>drie</li>
-                        <li>vier</li>
-                        <li>vijf</li>
-                        <li>zes</li>
-                        <li>zeven</li>
-                    </ul>
-                    </table>
+                    <h3>Wie ben ik</h3>
                 </div>
             </div>
         </div>
