--- a/index.html
+++ b/index.html
@@ -72,18 +72,12 @@
             </div>
             <div class="controw">
                 <div class="cont2">
-                    <img width: src="#">
+                    <img width="100%" height="100%" src="hzbuilding.jpg">
                 </div>
                 <div class="cont2">
-                    <table>
-                        <li>een</li>
-                        <li>twee</li>
-                        <li>drie</li>
-                        <li>vier</li>
-                        <li>vijf</li>
-                        <li>zes</li>
-                        <li>zeven</li>
-                    </table>
+                    <p>
+                        Ik heb afgelopen jaar mijn havo diploma
+                    </p>
                 </div>
             </div>
         </div>
@@ -95,25 +89,19 @@
             <div class="controw">
                 <div class="cont2">
                     <table>
-                        <li>een</li>
-                        <li>twee</li>
-                        <li>drie</li>
-                        <li>vier</li>
-                        <li>vijf</li>
-                        <li>zes</li>
-                        <li>zeven</li>
+                        <li>Ik hou me graag bezig met activiteiten op dit gebied</li>
+                        <li>Ik heb al enige ervaring met ICT door het mijzelf aan te leren of school</li>
+                        <li>Er is in de ICT veel doorgroeimogelijkheid, dit vind ik zeer belangrijk</li>
+                        <li>Het lijkt mij leuk altijd nieuwe dingen te leren, en in de ICT is dit belangrijk</li>
+                        <li>Ik wil graag van mijn hobby mijn baan maken</li>
                     </table>
                 </div>
                 <div class="spacer"></div>
                 <div class="cont2">
                     <table>
-                        <li>een</li>
-                        <li>twee</li>
-                        <li>drie</li>
-                        <li>vier</li>
-                        <li>vijf</li>
-                        <li>zes</li>
-                        <li>zeven</li>
+                        <p>
+
+                        </p>
                     </table>
                 </div>
             </div>
