--- a/sitemap.html
+++ b/sitemap.html
@@ -24,7 +24,7 @@
         <div class="footer">
             <div class="cont2">
                 <form>
-                    <input type="button" value="Terug " onclick="history.back()">
+                    <button class="button" type="button" onclick="history.back()"><a class="footerlink">terug</a></button>
                 </form>
             </div>
         </div>
