--- a/easternalegg.html
+++ b/easternalegg.html
@@ -13,11 +13,11 @@
         <div class="spacer"></div>
         <div class="cont1">
             <div class="cont2">
-                <a class="menu" href="easternalegg.html"><h1>Sitemap</h1></a>
-                <h2><a href="home.html">Home.html</a></h2>
-                <h2><a href="dashboard.html">Dashboard.html</a></h2>
-                <h2><a href="profiel.html">Profiel.html</a></h2>
-                <h2><a href="sitemap.html">Sitemap.html</a></h2>
+                <h1>Easternal egg</h1>
+                <h2><a href="https://kevinveenstra.github.io/profile.html">Kevin</a></h2>
+                <h2><a href="https://tijst.github.io/">Tijs</a></h2>
+                <h2><a href="https://tim2610.github.io/slo1/index.html">Tim</a></h2>
+                <h2><a href="https://valckxjeffrey.bitbucket.io/">Jeffrey   </a></h2>
             </div>
         </div>
         <div class="spacer"></div>
