--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div class="cont2">
                     <p>
-                        Ik heb afgelopen jaar mijn havo diploma
+                        <p class="ea3">Ik </p>
                     </p>
                 </div>
             </div>
