--- a/profiel.html
+++ b/profiel.html
@@ -69,10 +69,26 @@
         <div class="cont1">
             <div class="controw">
                 <div class="cont2">
-                    <img src="#">
+                    <img class="prof" src="profilepic.jpg">
                 </div>
                 <div class="cont2">
                     <h3>Wie ben ik</h3>
+                    <ul>
+                        <li>Naam:Jesse Peene</li>
+                        <li>Geboren: 15 Maart 2000</li>
+                        <li>Ik kom uit Middelburg</li>
+                        <li>Ik woon in Vlissingen</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="controw">
+                <div class="cont2">
+                    <h3>Wat doe ik graag?</h3>
+                    <ul>
+                        <li>Ik werk bij lidl middelburg</li>
+                        <li>Ik ben graag samen met vrienden</li>
+                        <li>Ik game graag</li>
+                    </ul>
                 </div>
             </div>
         </div>
