--- a/youdied.html
+++ b/youdied.html
@@ -7,14 +7,14 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <script src="main.js"></script>
 </head>
 
 <body class="youdied">
-   <img class="youdied" src="giif2.gif">
-   <img class="youdied" src="giif2.gif">
-   <img class="youdied" src="giif2.gif">
+   <img class="youdied" src="images/giif2.gif">
+   <img class="youdied" src="images/giif2.gif">
+   <img class="youdied" src="images/giif2.gif">
 </body>
 
 </html>
