--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -72,7 +72,7 @@
             </div>
             <div class="controw">
                 <div class="cont2">
-                    <img width="100%" height="100%" src="hzbuilding.jpg">
+                    <img class="home" src="images/hzbuilding.jpg">
                 </div>
                 <div class="cont2">
                     <p>
