--- a/profiel.html
+++ b/profiel.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profiel</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
         <div class="cont1">
             <div class="controw">
                 <div class="cont2">
-                    <img class="prof" src="profilepic.jpg">
+                    <img class="prof" src="images/profilepic.jpg">
                 </div>
                 <div class="cont2">
                     <h3>Wie ben ik</h3>
