--- a/Vakken.html
+++ b/Vakken.html
@@ -11,7 +11,7 @@
 <body>
     <div class="containall">
         <div class="cont1">
-            <h1 class="titel">Profiel</h1>
+            <h1 class="titel">vakken</h1>
         </div>
         <div class="spacer"></div>
         <div class="mobilemenu">
@@ -75,7 +75,7 @@
                 <p class="menubutton">
                     <a class="menu" href="profiel.html">
                         Profiel
-                    </a>
+                    </a>    
                 </p>
             </div>
         </div>
@@ -83,25 +83,10 @@
         <div class="cont1">
             <div class="controw">
                 <div class="cont2">
-                    <img class="prof" src="images/profilepic.jpg">
-                </div>
-                <div class="cont2">
-                    <h3>Wie ben ik</h3>
                     <ul>
-                        <li>Naam:Jesse Peene</li>
-                        <li>Geboren: 15 Maart 2000</li>
-                        <li>Ik kom uit Middelburg</li>
-                        <li>Ik woon in Vlissingen</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="controw">
-                <div class="cont2">
-                    <h3>Wat doe ik graag?</h3>
-                    <ul>
-                        <li>Ik werk bij lidl middelburg</li>
-                        <li>Ik ben graag samen met vrienden</li>
-                        <li>Ik game graag</li>
+                        <li><a href="compscience/Compscience.html">Computer Science</a></li>
+                        <li><a href="programming/programming.html">programming</a></li>
+                        <li><a href="SLO/slo.html">Studie Loopbaan Orientatie</a></li>
                     </ul>
                 </div>
             </div>
@@ -109,9 +94,9 @@
         <div class="spacer"></div>
         <div class="footer">
             <div class="cont2">
-                <a href="sitemap.html" class="footerlink">
-                    sitemap
-                </a>
+                <form>
+                    <button class="button" type="button" onclick="history.back()"><a class="footerlink">terug</a></button>
+                </form>
             </div>
         </div>
     </div>
