--- a/dashboard.html
+++ b/dashboard.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="containall">
-            <div class="cont1">
-                    <h1 class="titel">Dashboard</h1>
-                </div>
-                <div class="spacer"></div>
+        <div class="cont1">
+            <h1 class="titel">Dashboard</h1>
+        </div>
+        <div class="spacer"></div>
         <div class="mobilemenu">
             <div id="mmmbutton">
                 <p class="menubutton">
@@ -30,6 +30,13 @@
                     <p class="menubutton">
                         <a href="dashboard.html" class="menu">
                             Dashboard
+                        </a>
+                    </p>
+                </div>
+                <div id="mmcontent">
+                    <p class="menubutton">
+                        <a href="vakken.html" class="menu">
+                            vakken
                         </a>
                     </p>
                 </div>
@@ -54,6 +61,13 @@
                 <p class="menubutton">
                     <a class="menu" href="dashboard.html">
                         Dashboard
+                    </a>
+                </p>
+            </div>
+            <div class="button">
+                <p class="menubutton">
+                    <a class="menu" href="vakken.html">
+                        vakken
                     </a>
                 </p>
             </div>
