--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
                 </div>
                 <div id="mmcontent">
                     <p class="menubutton">
+                        <a href="vakken.html" class="menu">
+                            vakken
+                        </a>
+                    </p>
+                </div>
+                <div id="mmcontent">
+                    <p class="menubutton">
                         <a href="profiel.html" class="menu">
                             Profiel
                         </a>
@@ -54,6 +61,13 @@
                 <p class="menubutton">
                     <a class="menu" href="dashboard.html">
                         Dashboard
+                    </a>
+                </p>
+            </div>
+            <div class="button">
+                <p class="menubutton">
+                    <a class="menu" href="vakken.html">
+                        vakken
                     </a>
                 </p>
             </div>
