opdr 2 programming basics

--- a/SLO/slo.html
+++ b/SLO/slo.html
@@ -71,6 +71,7 @@
             <div class="cont2">
                 <ul>
                     <li><a href="slo1.html">SLO 1</a></li>
+                    <li><a href="slo2.html">SLO 2</a></li>
                 </ul>
             </div>
         </div>
