--- a/programming/programming.html
+++ b/programming/programming.html
@@ -71,6 +71,8 @@
             <div class="cont2">
                 <ul>
                     <li><a href="prog-opdr-1.html">Programeerconcepten</a></li>
+                    <li><a href="prog-opdr-2/prog-opdr-2.html">Types & Variables</a></li>
+                    <li><a href="prog-opdr-3/prog-opdr-3">Conditionals</a></li>
                 </ul>
             </div>
         </div>
