--- a/programming/prog-opdr-1.html
+++ b/programming/prog-opdr-1.html
@@ -75,15 +75,19 @@
                 </h1>
             </div>
             <div class="cont2">
-                <canvas  background-color="white" width="300" height="300" id="canvas1"></canvas>
-                <script>
+                <canvas style="background-color: white;"id="canvas1" width="300px" height="300px" style="border:1px solid #d3d3d3;">
+                    Je browser ondersteund geen canvas</canvas>
+                    
+                    <script>
                     var c = document.getElementById("canvas1");
                     var ctx = c.getContext("2d");
-
-                    ctx.moveTo(300,300);
-                    ctx.lineTo(0,0);
+                    ctx.moveTo(150,0);
+                    ctx.lineTo(300,150);
+                    ctx.lineTo(150,300);
+                    ctx.lineTo(0,150);
+                    ctx.lineTo(150,0);
                     ctx.stroke();
-                </script>
+                    </script>
             </div>
         </div>
         <div class="spacer"></div>
