opdracht 3 programming basics
conditionals

--- a/programming/prog-opdr-3/prog-opdr-3.html
+++ b/programming/prog-opdr-3/prog-opdr-3.html
@@ -6,12 +6,10 @@
 
 </head>
 
-<body onload="startfunction()">
-    type of input<br>
-    <input value="number" id="typeht"><br>
-    input value<br>
-    <input value="2" id="inputht"><br>
-    <button onclick="buttonfunction()" type="button">Execute</button>
+<body >
+    voer je cijfer in :<br>
+    <input id="cijfer"><br>
+    <button onclick="knop()" type="button">Bereken</button>
     <br>
     <p id="outputht"></p>
     <script src="app.js"></script>
