typescript opdracht 3 toegevoegd

--- a/programming/prog-opdr-3/prog-opdr-3.html
+++ b/programming/prog-opdr-3/prog-opdr-3.html
@@ -6,13 +6,43 @@
 
 </head>
 
-<body >
+<body>
+    <h1>Javascript</h1>
+    <h2>If/else statement</h2>
+
     voer je cijfer in :<br>
     <input id="cijfer"><br>
     <button onclick="knop()" type="button">Bereken</button>
     <br>
+
     <p id="outputht"></p>
+
+    <h2>Switch statement</h2>
+
+    <input id="cijfersw"><br>
+    <button onclick="knopswitch()" type="button">Bereken</button>
+    <br>
+
+    <p id="outputhtswitch"></p>
     <script src="app.js"></script>
+
+    <h1>Typescript</h1>
+    <h2>If/else Statement</h2>
+    Voer je cijfer in :<br>
+    <input id="typecijfer"><br>
+    <button onclick="typeknop()" type="button">Bereken</button>
+    <br>
+
+    <p id="typeoutput"></p>
+
+    <h2>switch statement</h2> 
+    <script src="typescript.js"></script>
+    Voer een cijfer in :<br>
+    <input id="typecijferswitch"><br>
+    <button onclick="typeknopswitch()" type="button">Bereken</button>
+    <br>
+
+    <p id="typeoutputswitch"></p>
 </body>
 
 </html>
