Booleans & XOR gates computer science

--- a/compscience/Compscience.html
+++ b/compscience/Compscience.html
@@ -69,7 +69,9 @@
         <div class="spacer"></div>
         <div class="cont1">
             <div class="cont2">
-                CONTENT
+                <ul>
+                    <li><a href="files/Opdracht Booleans en XOR.pdf">Booleans en XOR gates</a></li>
+                </ul>
             </div>
         </div>
         <div class="spacer"></div>
