--- a/programming/programming.html
+++ b/programming/programming.html
@@ -70,8 +70,8 @@
         <div class="cont1">
             <div class="cont2">
                 <ul>
-                    <li><a href="prog-opdr-1.html">Programeerconcepten</a></li>
-                    <li><a href="prog-opdr-2/prog-opdr-2.html">Types & Variables</a></li>
+                    <li><a href="prog-opdr-1.html">1 | Programeerconcepten</a></li>
+                    <li><a href="prog-opdr-2/prog-opdr-2.html">2Types & Variables</a></li>
                     <li><a href="prog-opdr-3/prog-les-3.html"> Les Conditionals</a></li>
                 </ul>
             </div>
