--- a/Vakken.html
+++ b/Vakken.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
-
+    <!-- asdfasd -->
 <body>
     <div class="containall">
         <div class="cont1">
