opdracht 4 & 5 programming basics

--- a/compscience/Compscience.html
+++ b/compscience/Compscience.html
@@ -71,6 +71,7 @@
             <div class="cont2">
                 <ul>
                     <li><a href="files/Opdracht Booleans en XOR.pdf">Booleans en XOR gates</a></li>
+                    <li><a href='Fixdezesite.html'>Opdracht fix deze site</a></li>
                 </ul>
             </div>
         </div>
