--- a/programming/programming.html
+++ b/programming/programming.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programming</title>
     <link rel="stylesheet" type="text/css" href="../styles.css" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -73,6 +73,7 @@
                     <li><a href="prog-opdr-1.html">1 | Programeerconcepten</a></li>
                     <li><a href="prog-opdr-2/prog-opdr-2.html">2Types & Variables</a></li>
                     <li><a href="prog-opdr-3/prog-les-3.html"> Les Conditionals</a></li>
+                    <li><a href="prog-opdr-4/prog-opdr-4.html">Les Loops</a></li>
                 </ul>
             </div>
         </div>
