opracht 5 gemaakt in ts

--- a/programming/prog-opdr-5/prog-opdr-5.html
+++ b/programming/prog-opdr-5/prog-opdr-5.html
@@ -10,7 +10,8 @@
 
 <body>
     <!-- <body  onload="countdown()"> -->
-    <script src='app.js'></script>
+    <!-- <script src='app.js'></script> -->
+    <script src ='typescript.js'></script>
 </body>
 
 </html>
