--- a/programming/raadje plaatje/raadjeplaatje.html
+++ b/programming/raadje plaatje/raadjeplaatje.html
@@ -10,17 +10,20 @@
 </head>
 
 <body onload='onload()'>
-    <script src="source.js"></script>
+
     <div class="containall">
         <div class="objectivecontainer">
             <div class='objective' id="obj">
             </div>
             <div class='scoreboard'>
-                Klik op de kleur die je hiernaast ziet<br>
+                <div id='starttext'>Klik op de kleur die je hiernaast ziet</div>
                 <div id='points'>Hier komt je score</div>
+                <div id='time'>Hier komt je tijd</div>
+                <div id='start'></div>
             </div>
         </div>
-        <div class="game" onclick="areaofeffect()">
+        <br>
+        <div class="game">
                 <div class="element" id='el1'></div>
                 <div class="element" id='el2'></div>
                 <div class="element" id='el3'></div>
@@ -32,6 +35,7 @@
                 <div class="element" id='el9'></div>
         </div>
     </div>
+    <script src="source.js"></script>
 </body>
 
 </html>
