--- a/programming/prog-opdr-9/12345.html
+++ b/programming/prog-opdr-9/12345.html
@@ -14,7 +14,7 @@
         buttonclick.addEventListener('click', activate);
 
         function activate(){
-            document.getElementById('output').innerHTML = 'haha tijs!';
+            document.getElementById('output').innerHTML = 'haha tim!';
         }
     </script>
 </body>
