--- a/programming/prog-opdr-9/prog-opdr-9.html
+++ b/programming/prog-opdr-9/prog-opdr-9.html
@@ -8,13 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
-    <button id='knopske'>mooi knopske</button>
+<body id='body'>
+    <!-- <button id='knopske'>mooi knopske</button>
     <form>
         <input type='text' name='text' id='textinp'>
     </form>
     <div id="container">
-        <img src='https://picsum.photos/200/300/?random' id='klikimg'>
+        <img src='https://picsum.photos/200/300/?random' id='klikimg'> -->
+    <form>
+        Naam:
+        <input type='text' name='name' id='productName'>
+        Prijs:
+        <input type='number' name='price' id='productPrice'>
+    </form>
+    <button name='submit' id='addProduct'>Voeg toe</button>
+    <table id='list'>
+
+    </table>
 </body>
 
 <script src='app.js'></script>
