--- a/programming/prog-opdr-8/prog-opdr-8.html
+++ b/programming/prog-opdr-8/prog-opdr-8.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    
+
 </head>
+
 <body id='body'>
-    <table>
+    <!-- <table id='table'>
         <tr id="course1">
             <td>Computerscience basics</td>
             <td id='c1'>7</td>
@@ -27,7 +29,20 @@
             <td id='c4'>6.7</td>
         </tr>
     </table>
-<!-- tr*2>td*4#tableitem$ -->
-<script src='app.js'></script>
+    <ul id="course">
+        <li id="course1">Computerscience basics</li>
+        <li id="course2">Programming basics</li>
+        <li id="course3">Studieloopbaan orientatie</li>
+        <li id="course4">Gamedevelopment with TypeScript</li>
+        <li id="course5">Professional Skills 1</li>
+        <li id="course6">HZ personality 2a</li>
+        <li id="course7">Framework development 1</li>
+    </ul>
+    <form>
+        <input type='text' name='text' id='sourceinput'>
+    </form>
+    <button id='button'>submit source</button>
+    <div id='imghome'></div> -->
 </body>
+
 </html>
