--- a/SLO/slo.html
+++ b/SLO/slo.html
@@ -72,6 +72,7 @@
                 <ul>
                     <li><a href="slo1.html">SLO 1</a></li>
                     <li><a href="slo2.html">SLO 2</a></li>
+                    <li><a href='SLOfiles/SLO31Jobevent.pdf'>SLO 3.1</a></li>
                     <li><a href="SLOfiles/SLO32Beroepsbeeld.pdf">SLO 3.2</a></li> 
                 </ul>
             </div>
