SLO blok 1 Finished

--- a/SLO/slo.html
+++ b/SLO/slo.html
@@ -70,10 +70,11 @@
         <div class="cont1">
             <div class="cont2">
                 <ul>
-                    <li><a href="slo1.html">SLO 1</a></li>
-                    <li><a href="slo2.html">SLO 2</a></li>
-                    <li><a href='SLOfiles/SLO31Jobevent.pdf'>SLO 3.1</a></li>
-                    <li><a href="SLOfiles/SLO32Beroepsbeeld.pdf">SLO 3.2</a></li> 
+                    <li><a href="slo1.html">SLO 1 De Solicitatie</a></li>
+                    <li><a href="slo2.html">SLO 2 Motivatie</a></li>
+                    <li><a href='SLOfiles/SLO31Jobevent.pdf'>SLO 3.1 HBO-I Job Event</a></li>
+                    <li><a href="SLOfiles/SLO32Beroepsbeeld.pdf">SLO 3.2 BedrijvenSafari</a></li> 
+                    <li><a href='SLOfiles/SLO33Assesment.pdf'>SLO 3.3 Conclusie</a></li>
                 </ul>
             </div>
         </div>
